8323101: C2: assert(n->in(0) == nullptr) failed: divisions with zero check should already have bailed out earlier in split-if

Reviewed-by: thartmann
Backport-of: 7e0a4ed6292586772c23292dbdd67ed1db5c12f7